--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -14,7 +14,7 @@ django-ckeditor==6.1.0
 django-filter==2.4.0
 django-js-asset==1.2.2
 django-widget-tweaks==1.4.8
-docutils==0.17.1
+docutils==0.16
 future==0.18.2
 html5lib==1.1
 idna==3.2
@@ -37,6 +37,7 @@ requests==2.26.0
 six==1.16.0
 snowballstemmer==2.1.0
 Sphinx==4.1.1
+sphinx-rtd-theme==0.5.2
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
